refactoring and reducing technical debt part 4